--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       "data": [
        {
         "id": 1,
-        "img": "https://drive.google.com/file/d/1RehqUKtZNzvaz_O2Ijgsq87sq0awSE4S/view?usp=sharing"
+        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20250109-WA0001.jpg"
        },
       {
         "id": 2,
-        "img": "https://drive.google.com/file/d/1z08dVY4lpbziJHA7l-ANPgIjMHAnEavQ/view?usp=sharing"
+        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20250109-WA0000.jpg"
       }
       ],
       "grupos": [
