--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       "data": [
        {
         "id": 1,
-        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20250109-WA0001.jpg"
+        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20250109-WA0001.jpg",
+        "frase": "Tú eres tú y siempre me gustarás por como eres tú"
        },
       {
         "id": 2,
-        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20240825-WA0000.jpg"
+        "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/IMG-20240825-WA0000.jpg",
+        "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
       }
       ]
     }
