--- a/index.html
+++ b/index.html
@@ -23,57 +23,57 @@
           {
             "id": 3,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/3.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Te amo con cada estrellita de la galaxia"
           },
           {
             "id": 4,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/4.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Lo mejor de mi vida es que tú estás en ella"
           },
           {
             "id": 5,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/1.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Todo lo bonito de la vida lo encuentro en tu sonrisa"
           },
           {
             "id": 6,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/6.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Siempre serás la mejor elección de mi vida"
           },
           {
             "id": 7,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/7.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Muéstrame tu fiel amor por la mañana, porque en ti he puesto mi confianza. Pongo mi vida en tus manos, muéstrame lo que debo hacer. "
           },
           {
             "id": 8,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/8.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Entonces, pasé yo junto a ti y te vi. Era tu tiempo, el tiempo de los amores. Extendí sobre ti el borde de mi manto y cubrí tu desnudez; me comprometí con juramento, hice alianza contigo."
           },
           {
             "id": 9,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/9.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Pero yo confío en tu gran amor, mi corazón se alegra en tu salvación."
           },
           {
             "id": 10,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/10.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Eres una mujer hermosa. Mereces una vida hermosa"
           },
           {
             "id": 11,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/11.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Tú deberías ser besada cada día, cada hora, cada minuto"
           },
           {
             "id": 12,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/12.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "Uno solo puede ser vencido, pero dos pueden resistir."
           },
           {
             "id": 13,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/13.jpg",
-            "frase": "La medicina de mi alma es la de tus besos que me hacen suspirar"
+            "frase": "¡Qué hermosa eres, y cuán suave. Oh amor deleitoso!"
           }
         ]
       }
