--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             "id": 13,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/13.jpg",
             "frase": "¡Qué hermosa eres, y cuán suave. Oh amor deleitoso!"
+          },
+          {
+            "id": 14,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/14.jpg",
+            "frase": "Tú Amor"
           }
         ]
       }
