--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
             "id": 14,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/14.jpg",
             "frase": "Tú Amor"
+          },
+          {
+            "id": 15,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/15.jpg",
+            "frase": "Tú deberías ser besada cada día, cada hora, cada minuto"
+          },
+          {
+            "id": 16,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/16.jpg",
+            "frase": "Uno solo puede ser vencido, pero dos pueden resistir."
+          },
+          {
+            "id": 17,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/17.jpg",
+            "frase": "¡Qué hermosa eres, y cuán suave. Oh amor deleitoso!"
+          },
+          {
+            "id": 18,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/18.jpg",
+            "frase": "Tú Amor"
           }
         ]
       }
