--- a/index.html
+++ b/index.html
@@ -99,6 +99,31 @@
             "id": 18,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/18.jpg",
             "frase": "Tú Amor"
+          },
+          {
+            "id": 19,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/19.jpg",
+            "frase": "Tú Amor"
+          },
+          {
+            "id": 20,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/20.jpg",
+            "frase": "Tú Amor"
+          },
+          {
+            "id": 21,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/21.jpg",
+            "frase": "Tú Amor"
+          },
+          {
+            "id": 22,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/22.jpg",
+            "frase": "Tú Amor"
+          },
+          {
+            "id": 23,
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/23.jpg",
+            "frase": "Tú Amor"
           }
         ]
       }
