--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           {
             "id": 15,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/15.jpg",
-            "frase": "Tú deberías ser besada cada día, cada hora, cada minuto"
+            "frase": "Tú deberías ser besada cada día, cada hora, cada minuto."
           },
           {
             "id": 16,
@@ -98,32 +98,32 @@
           {
             "id": 18,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/18.jpg",
-            "frase": "Tú Amor"
+            "frase": "Por mas que nos falte el dinero no debemos dejar de compartir muchas aventuras juntos."
           },
           {
             "id": 19,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/19.jpg",
-            "frase": "Tú Amor"
+            "frase": "Tú eres Mi Amor"
           },
           {
             "id": 20,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/20.jpg",
-            "frase": "Tú Amor"
+            "frase": "Te Amo Mi Amor"
           },
           {
             "id": 21,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/21.jpg",
-            "frase": "Tú Amor"
+            "frase": "Somos unos grandes amigos solo tenemos que tenernos paciencia."
           },
           {
             "id": 22,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/22.jpg",
-            "frase": "Tú Amor"
+            "frase": "Siempre haciendo locuras juntos"
           },
           {
             "id": 23,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/23.jpg",
-            "frase": "Tú Amor"
+            "frase": "Que hermosa sonrisa asi deberia ser todos los días a pesar por que tú felicidad se contagia."
           }
         ]
       }
