--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           {
             "id": 23,
             "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/23.jpg",
-            "frase": "Que hermosa sonrisa asi deberia ser todos los días a pesar por que tú felicidad se contagia."
+            "frase": "Que hermosa sonrisa asi deberia ser todos los días, por que tú felicidad se contagia."
           }
         ]
       }
