--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           },
           {
             "id": 99999,
-            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/99999.jpg",
-            "frase": "Que hermosa sonrisa asi deberia ser todos los días, por que tú felicidad se contagia."
+            "img": "https://raw.githubusercontent.com/felipeAlmEspa/pyfapi/main/99999.png",
+            "frase": "TE AMO"
           }
         ]
       }
